--- a/src/pages/projects/css/projects.css
+++ b/src/pages/projects/css/projects.css
@@ -123,6 +123,7 @@ Products Page
 .single-project {
   background: var(--clr-grey-10);
   border-radius: var(--radius);
+  border: 1px solid var(--clr-grey-8);
 }
 .project-container img {
   border-top-left-radius: var(--radius);
@@ -168,5 +169,9 @@ Products Page
 .projects-page-center {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
-  gap: 3rem 1rem;
+  gap: 3rem;
+}
+
+.project-paragraph {
+  font-size: 0.9rem;
 }
