--- a/css/globals.css
+++ b/css/globals.css
@@ -27,7 +27,7 @@
 }
 
 * {
-  border: 1px solid black;
+  /*border: 1px solid black; */
 }
 
 *,
@@ -51,6 +51,9 @@ ul {
 }
 a {
   text-decoration: none;
+}
+a:visited {
+  color: inherit;
 }
 
 h1,
