--- a/css/nav.css
+++ b/css/nav.css
@@ -22,9 +22,24 @@
   align-items: center;
 }
 
-.nav-header div {
-  grid-column: span 2;
+.nav-name {
+  grid-column: 1/3;
   font-size: 1.8rem;
+}
+
+.nav-btn-container {
+  display: block;
+  grid-column: 3;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+.bars-bigger {
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-header button {
@@ -53,7 +68,7 @@
 
   .nav-links {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   }
 
   .nav-links a {
