--- a/css/skills.css
+++ b/css/skills.css
@@ -1,7 +1,6 @@
 @import url("./globals.css");
 
 .skills-center {
-  background: rgb(253, 252, 169);
   margin: 0 auto;
 }
 
@@ -26,7 +25,7 @@
 
 .skills-list li {
   display: block;
-  background: rgb(218, 218, 218);
+  background: #f5f5f5;
   width: fit-content;
   font-size: 1.4rem;
 }
