--- a/css/hero.css
+++ b/css/hero.css
@@ -1,4 +1,5 @@
 .hero {
+  background: #fff;
 }
 
 .hero-center {
@@ -21,11 +22,15 @@
   padding: 1rem;
   box-shadow: var(--dark-shadow);
   border: 1px solid black;
+  background: var(--color-pri-1);
+  color: var(--color-whi-1);
+  font-weight: 600;
 }
 
 .hero-info h4 {
   font-size: 1.5rem;
   font-weight: 500;
+  color: var(--color-sec-3);
 }
 
 .hero-icons {
