--- a/css/skills.css
+++ b/css/skills.css
@@ -2,18 +2,19 @@
 
 .skills-center {
   margin: 0 auto;
+  height: 65vh;
 }
 
 .skills-info {
   display: grid;
   grid-template-columns: 1fr;
   place-items: center;
-  margin-top: 10%;
-  margin-bottom: 10%;
+  margin-top: 2%;
 }
 
 .skills-title {
   text-align: center;
+  margin-bottom: 5%;
 }
 
 .skills-list {
@@ -28,9 +29,14 @@
   background: #f5f5f5;
   width: fit-content;
   font-size: 1.4rem;
+  padding: 10px;
 }
 
 @media screen and (min-width: 768px) {
+  .skills-center {
+    height: 50vh;
+  }
+
   .skills-list {
     grid-template-columns: 1fr 1fr 1fr;
   }
