--- a/css/nav.css
+++ b/css/nav.css
@@ -31,7 +31,8 @@
 .nav-btn-container {
   display: block;
   grid-column: 3;
-  width: 100%;
+  padding-left: 30px;
+  width: 80%;
   height: 100%;
   margin: 0;
   border: 0;
